# indexeddict

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
src/indexed_dict/: __init__.py  _views.py  indexed_dict.py
tests/: test_setitem.py
