[project]
name = "indexed-dict"
version = "0.1.0"
description = "A dictionary that preserves insertion order and allows index-based operations."
readme = "README.md"
authors = [{ name = "Ashlynn Antrobus", email = "ashlynn@prosepal.io" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Intended Audience :: Developers",

]
requires-python = ">=3.09"
dependencies = [
    "pytest-cov>=6.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
testing = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=indexed_dict"
